--- a/web-static/styles/2-footer.css
+++ b/web-static/styles/2-footer.css
@@ -1,9 +1,10 @@
   footer {
-      background:#00FF00;
+      background:white;
       position:fixed;
       height:60px;
       width:100%;
       bottom:0;
+      border-top:1px #CCCCCC;
     }
 
   p {
