--- a/web-static/styles/2-header.css
+++ b/web-static/styles/2-header.css
@@ -1,8 +1,15 @@
 
   header {
-      background:#FF0000;
+      background:white;
       height:70px;
       width:100%;
+      border-bottom: 1px #CCCCCC;
+    }
+
+    .logo {
+      left: 20px
+      position:absolute;
+      top:50%;
     }
 
 
