fix url in 3-header.css

--- a/web-static/styles/3-footer.css
+++ b/web-static/styles/3-footer.css
@@ -4,10 +4,10 @@
       height:60px;
       width:100%;
       bottom:0;
-      border-top:1px #CCCCCC;
+      border-top:1px solid #CCCCCC;
     }
 
-  p {
+    footer  p {
       position:absolute;
       text-align:center;
       top:10%;
