--- a/web-static/styles/3-header.css
+++ b/web-static/styles/3-header.css
@@ -3,15 +3,14 @@
       background:white;
       height:70px;
       width:100%;
-      border-bottom: 1px #CCCCCC;
+      border-bottom: 1px solid #CCCCCC;
     }
 
     .logo {
       margin:0;
-      background:url(images/logo.png)
+      background:url("../images/logo.png") no-repeat;
       left: 20px
-      position:absolute;
-      top:50%;
+      height:100%;
     }
 
 
