--- a/web-static/styles/4-common.css
+++ b/web-static/styles/4-common.css
@@ -1,11 +1,11 @@
  body {
       margin:0;
       padding:0;
-      font-color:#484848;
+      color:#484848;
       font-size:14px;
       font-family:Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
     }
-    .container {
+  body .container {
       max-width: 1000px;
       margin: 30px 30px;
       right: 50%;
