--- a/web-static/styles/4-filters.css
+++ b/web-static/styles/4-filters.css
@@ -1,20 +1,21 @@
-section .filters {
+.containers .filters  {
   background:white;
   height:70px;
   width:100%;
-  border: 1px #DDDDDD 4px;
+  border: 1px #DDDDDD;
+  border-radius: 4px;
 }
 
 button {
-  font-size:18;
-  background:#FF5A5F;
-  color:#FFFFFF;
-  height:48px;
-  width:20%;
-  border-radius:4px;
-  top:0;
-  bottom:0;
-  right:30px;
+  font-size: 18px;
+  background: #FF5A5F;
+  color: #FFFFFF;
+  height: 48px;
+  width: 20%;
+  border-radius: 4px;
+  top: 15%;
+  right: 30px;
+  position: absolute;
 }
 button:hover {
   opacity:90%;
