--- a/web-static/styles/4-common.css
+++ b/web-static/styles/4-common.css
@@ -7,7 +7,5 @@
     }
   body .container {
       max-width: 1000px;
-      margin: 30px 30px;
-      right: 50%;
-      left:0;
+      margin: 30px auto;
     }
