--- a/web-static/styles/4-filters.css
+++ b/web-static/styles/4-filters.css
@@ -12,10 +12,11 @@ button {
   color: #FFFFFF;
   height: 48px;
   width: 20%;
+  border-style: none;
   border-radius: 4px;
-  top: 15%;
-  right: 30px;
-  position: absolute;
+  top: 0;
+  left: 80%;
+  position: relative;
 }
 button:hover {
   opacity:90%;
