--- a/web-static/styles/4-filters.css
+++ b/web-static/styles/4-filters.css
@@ -2,7 +2,7 @@
   background:white;
   height:70px;
   width:100%;
-  border: 1px #DDDDDD;
+  border: 1px solid #DDDDDD;
   border-radius: 4px;
 }
 
@@ -14,8 +14,8 @@ button {
   width: 20%;
   border-style: none;
   border-radius: 4px;
-  top: 0;
-  left: 80%;
+  top: 4px;
+  left: 79%;
   position: relative;
 }
 button:hover {
