--- a/web-static/styles/5-filters.css
+++ b/web-static/styles/5-filters.css
@@ -21,3 +21,24 @@ button {
 button:hover {
   opacity:90%;
 }
+
+.filters div {
+    display: inline-block;
+    position: relative;
+    height: 100%;
+    width: 25%;
+}
+.filters h3 {
+    margin-left: 15%;
+    margin-bottom: 0;
+    font-weight: 600;
+}
+.filters h4 {
+    margin-left: 15%;
+    margin-top: 0;
+    font-weight: 400;
+    font-size: 14px;
+}
+.locations {
+    border-right: 1px solid #DDDDDD;
+}
